--- a/pets_nope/pubspec.yaml
+++ b/pets_nope/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   gsheets: ^0.3.1
+  animated_splash_screen: ^1.1.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,8 +51,11 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - image/sp.png
 
-  # An image asset can refer to one or more resolution-specific "variants", see
+
+    # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
